# homevolt-local

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/homevolt_local/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device.py  diagnostics.py  icons.json  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/homevolt_local/translations/: de.json  en.json  fi.json  fr.json  nb.json  nl.json  sv.json
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_device.py  test_diagnostics.py  test_init.py  test_number.py  test_select.py  test_sensor.py  test_switch.py  test_translations.py
